Finalize Customize & Sub Features Layout Incl. Badges on SettingsCards

--- a/src/Winhance.UI/Features/Common/Localization/af.json
+++ b/src/Winhance.UI/Features/Common/Localization/af.json
@@ -1189,11 +1189,11 @@
   "Status_VerifyingApps": "Verifieer watter toepassings geïnstalleer is...",
   "Status_SortingApps": "Sorteer toepassings vir vertoning...",
   "Common_RestartRequired": "⚠️ Stelselherbegin vereis vir veranderinge om in werking te tree",
-  "Compatibility_Windows10Only": "ℹ️ Hierdie instelling is slegs op Windows 10 van toepassing",
-  "Compatibility_Windows11Only": "ℹ️ Hierdie instelling is slegs op Windows 11 van toepassing",
-  "Compatibility_MinBuild": "ℹ️ Vereis Windows bou {0} of hoër",
-  "Compatibility_MaxBuild": "ℹ️ Slegs versoenbaar met Windows bou {0} of laer",
-  "Compatibility_BuildRange": "ℹ️ Versoenbaar met boue: {0}",
+  "Compatibility_Windows10Only": "Hierdie instelling is slegs op Windows 10 van toepassing",
+  "Compatibility_Windows11Only": "Hierdie instelling is slegs op Windows 11 van toepassing",
+  "Compatibility_MinBuild": "Vereis Windows bou {0} of hoër",
+  "Compatibility_MaxBuild": "Slegs versoenbaar met Windows bou {0} of laer",
+  "Compatibility_BuildRange": "Versoenbaar met boue: {0}",
   "Msg_GenerateXmlConfirm": "Jy kan 'n autounattend.xml lêer genereer om by 'n Windows ISO te voeg om Windows tydens installasie aan te pas gebaseer op jou keuses in Winhance.\n\nHoe dit werk:\n• Toepassings gekies op die Windows Toepassings skerm sal outomaties gedeïnstalleer word\n• Instellings in die Optimaliseer en Pasmaak skerms sal bygevoeg word volgens hul huidige toestand in Winhance\n\nAs jy seker is jou keuses is korrek kan jy voortgaan.\nIndien nie, klik nee, hersien jou program- en instellingkeuses, en kom terug hierheen.\n\nWil jy die XML lêer genereer en dit by die media voeg?",
   "Dialog_Success": "Sukses",
   "Dialog_ValidationComplete": "Validasie Voltooi",
