--- a/src/Winhance.UI/Features/Common/Localization/cs.json
+++ b/src/Winhance.UI/Features/Common/Localization/cs.json
@@ -1189,11 +1189,11 @@
   "Status_VerifyingApps": "Ověřování, které aplikace jsou nainstalovány...",
   "Status_SortingApps": "Třídění aplikací pro zobrazení...",
   "Common_RestartRequired": "⚠️ Pro projevení změn je nutný restart systému",
-  "Compatibility_Windows10Only": "ℹ️ Toto nastavení platí pouze pro Windows 10",
-  "Compatibility_Windows11Only": "ℹ️ Toto nastavení platí pouze pro Windows 11",
-  "Compatibility_MinBuild": "ℹ️ Vyžaduje sestavení Windows {0} nebo vyšší",
-  "Compatibility_MaxBuild": "ℹ️ Kompatibilní pouze se sestavením Windows {0} nebo nižším",
-  "Compatibility_BuildRange": "ℹ️ Kompatibilní se sestaveními: {0}",
+  "Compatibility_Windows10Only": "Toto nastavení platí pouze pro Windows 10",
+  "Compatibility_Windows11Only": "Toto nastavení platí pouze pro Windows 11",
+  "Compatibility_MinBuild": "Vyžaduje sestavení Windows {0} nebo vyšší",
+  "Compatibility_MaxBuild": "Kompatibilní pouze se sestavením Windows {0} nebo nižším",
+  "Compatibility_BuildRange": "Kompatibilní se sestaveními: {0}",
   "Msg_GenerateXmlConfirm": "Můžete vygenerovat soubor autounattend.xml k přidání do Windows ISO pro přizpůsobení Windows během instalace na základě vašich výběrů ve Winhance.\n\nJak to funguje:\n• Aplikace vybrané na obrazovce Aplikace Windows budou automaticky odinstalovány\n• Nastavení na obrazovkách Optimalizovat a Přizpůsobit budou přidána podle jejich aktuálního stavu ve Winhance\n\nPokud jste si jisti, že jsou vaše výběry správné, můžete pokračovat.\nPokud ne, stiskněte ne, zkontrolujte své výběry aplikací a nastavení a vraťte se sem.\n\nChcete vygenerovat soubor XML a přidat jej do média?",
   "Dialog_Success": "Úspěch",
   "Dialog_ValidationComplete": "Ověření dokončeno",
