--- a/src/Winhance.UI/Features/Common/Localization/de.json
+++ b/src/Winhance.UI/Features/Common/Localization/de.json
@@ -1189,11 +1189,11 @@
   "Status_VerifyingApps": "Es wird überprüft, welche Anwendungen installiert sind...",
   "Status_SortingApps": "Anwendungen werden zur Anzeige sortiert...",
   "Common_RestartRequired": "⚠️ Systemneustart erforderlich, damit die Änderungen wirksam werden",
-  "Compatibility_Windows10Only": "ℹ️ Diese Einstellung gilt nur für Windows 10",
-  "Compatibility_Windows11Only": "ℹ️ Diese Einstellung gilt nur für Windows 11",
-  "Compatibility_MinBuild": "ℹ️ Erfordert Windows Build {0} oder höher",
-  "Compatibility_MaxBuild": "ℹ️ Nur kompatibel mit Windows Build {0} oder niedriger",
-  "Compatibility_BuildRange": "ℹ️ Kompatibel mit Builds: {0}",
+  "Compatibility_Windows10Only": "Diese Einstellung gilt nur für Windows 10",
+  "Compatibility_Windows11Only": "Diese Einstellung gilt nur für Windows 11",
+  "Compatibility_MinBuild": "Erfordert Windows Build {0} oder höher",
+  "Compatibility_MaxBuild": "Nur kompatibel mit Windows Build {0} oder niedriger",
+  "Compatibility_BuildRange": "Kompatibel mit Builds: {0}",
   "Msg_GenerateXmlConfirm": "Sie können eine autounattend.xml-Datei generieren, die Sie einer Windows-ISO hinzufügen können, um Windows während der Installation basierend auf Ihren Auswahlen in Winhance anzupassen.\n\nSo funktioniert es:\n• Auf dem Bildschirm 'Windows-Apps' ausgewählte Apps werden automatisch deinstalliert\n• Einstellungen auf den Bildschirmen 'Optimieren' und 'Anpassen' werden gemäß ihrem aktuellen Zustand in Winhance hinzugefügt\n\nWenn Sie sicher sind, dass Ihre Auswahlen korrekt sind, können Sie fortfahren.\nWenn nicht, klicken Sie auf 'Nein', überprüfen Sie Ihre App- und Einstellungsauswahlen und kommen Sie hierher zurück.\n\nMöchten Sie die XML-Datei generieren und zum Medium hinzufügen?",
   "Dialog_Success": "Erfolg",
   "Dialog_ValidationComplete": "Validierung abgeschlossen",
