--- a/src/Winhance.UI/Features/Common/Localization/el.json
+++ b/src/Winhance.UI/Features/Common/Localization/el.json
@@ -1189,11 +1189,11 @@
   "Status_VerifyingApps": "Επαλήθευση ποιες εφαρμογές είναι εγκατεστημένες...",
   "Status_SortingApps": "Ταξινόμηση εφαρμογών για εμφάνιση...",
   "Common_RestartRequired": "⚠️ Απαιτείται επανεκκίνηση συστήματος για να ισχύσουν οι αλλαγές",
-  "Compatibility_Windows10Only": "ℹ️ Αυτή η ρύθμιση ισχύει μόνο για Windows 10",
-  "Compatibility_Windows11Only": "ℹ️ Αυτή η ρύθμιση ισχύει μόνο για Windows 11",
-  "Compatibility_MinBuild": "ℹ️ Απαιτεί έκδοση Windows {0} ή νεότερη",
-  "Compatibility_MaxBuild": "ℹ️ Συμβατό μόνο με έκδοση Windows {0} ή παλαιότερη",
-  "Compatibility_BuildRange": "ℹ️ Συμβατό με εκδόσεις: {0}",
+  "Compatibility_Windows10Only": "Αυτή η ρύθμιση ισχύει μόνο για Windows 10",
+  "Compatibility_Windows11Only": "Αυτή η ρύθμιση ισχύει μόνο για Windows 11",
+  "Compatibility_MinBuild": "Απαιτεί έκδοση Windows {0} ή νεότερη",
+  "Compatibility_MaxBuild": "Συμβατό μόνο με έκδοση Windows {0} ή παλαιότερη",
+  "Compatibility_BuildRange": "Συμβατό με εκδόσεις: {0}",
   "Msg_GenerateXmlConfirm": "Μπορείτε να δημιουργήσετε ένα αρχείο autounattend.xml για προσθήκη σε ένα ISO Windows για προσαρμογή των Windows κατά την εγκατάσταση βάσει των επιλογών σας στο Winhance.\n\nΠώς λειτουργεί:\n• Εφαρμογές που επιλέχθηκαν στην οθόνη Εφαρμογές Windows θα απεγκατασταθούν αυτόματα\n• Ρυθμίσεις στις οθόνες Βελτιστοποίηση και Προσαρμογή θα προστεθούν σύμφωνα με την τρέχουσα κατάστασή τους στο Winhance\n\nΑν είστε σίγουροι ότι οι επιλογές σας είναι σωστές μπορείτε να συνεχίσετε.\nΑν όχι, πατήστε όχι, ελέγξτε τις επιλογές εφαρμογών και ρυθμίσεων, και επιστρέψτε εδώ.\n\nΘέλετε να δημιουργήσετε το αρχείο XML και να το προσθέσετε στα μέσα;",
   "Dialog_Success": "Επιτυχία",
   "Dialog_ValidationComplete": "Επικύρωση Ολοκληρώθηκε",
