--- a/src/Winhance.UI/Features/Common/Localization/en.json
+++ b/src/Winhance.UI/Features/Common/Localization/en.json
@@ -1193,11 +1193,11 @@
   "Status_VerifyingApps": "Verifying which applications are installed...",
   "Status_SortingApps": "Sorting applications for display...",
   "Common_RestartRequired": "⚠️ System restart required for changes to take effect",
-  "Compatibility_Windows10Only": "ℹ️ This setting applies to Windows 10 only",
-  "Compatibility_Windows11Only": "ℹ️ This setting applies to Windows 11 only",
-  "Compatibility_MinBuild": "ℹ️ Requires Windows build {0} or higher",
-  "Compatibility_MaxBuild": "ℹ️ Only compatible with Windows build {0} or lower",
-  "Compatibility_BuildRange": "ℹ️ Compatible with builds: {0}",
+  "Compatibility_Windows10Only": "This setting applies to Windows 10 only",
+  "Compatibility_Windows11Only": "This setting applies to Windows 11 only",
+  "Compatibility_MinBuild": "Requires Windows build {0} or higher",
+  "Compatibility_MaxBuild": "Only compatible with Windows build {0} or lower",
+  "Compatibility_BuildRange": "Compatible with builds: {0}",
   "Msg_GenerateXmlConfirm": "You can generate an autounattend.xml file to add to a Windows ISO to customize Windows during installation based on your selections in Winhance.\n\nHow this works:\n• Apps selected on the Windows Apps screen will be uninstalled automatically\n• Settings in the Optimize and Customize screens will be added according to their current state in Winhance\n\nIf you\u0027re sure your selections are correct you can continue.\nIf not, hit no, review your app and setting selections, and come back here.\n\nDo you want to generate the XML file and add it to the media?",
   "Dialog_Success": "Success",
   "Dialog_ValidationComplete": "Validation Complete",
