--- a/src/Winhance.UI/Features/Common/Localization/es.json
+++ b/src/Winhance.UI/Features/Common/Localization/es.json
@@ -1189,11 +1189,11 @@
   "Status_VerifyingApps": "Verificando qué aplicaciones están instaladas...",
   "Status_SortingApps": "Ordenando aplicaciones para mostrar...",
   "Common_RestartRequired": "⚠️ Se requiere reiniciar el sistema para que los cambios surtan efecto",
-  "Compatibility_Windows10Only": "ℹ️ Esta configuración solo se aplica a Windows 10",
-  "Compatibility_Windows11Only": "ℹ️ Esta configuración solo se aplica a Windows 11",
-  "Compatibility_MinBuild": "ℹ️ Requiere la compilación de Windows {0} o superior",
-  "Compatibility_MaxBuild": "ℹ️ Solo compatible con la compilación de Windows {0} o inferior",
-  "Compatibility_BuildRange": "ℹ️ Compatible con compilaciones: {0}",
+  "Compatibility_Windows10Only": "Esta configuración solo se aplica a Windows 10",
+  "Compatibility_Windows11Only": "Esta configuración solo se aplica a Windows 11",
+  "Compatibility_MinBuild": "Requiere la compilación de Windows {0} o superior",
+  "Compatibility_MaxBuild": "Solo compatible con la compilación de Windows {0} o inferior",
+  "Compatibility_BuildRange": "Compatible con compilaciones: {0}",
   "Msg_GenerateXmlConfirm": "Puedes generar un archivo autounattend.xml para añadir a un ISO de Windows y personalizar Windows durante la instalación según tus selecciones en Winhance.\n\nCómo funciona esto:\n• Las aplicaciones seleccionadas en la pantalla de Aplicaciones de Windows se desinstalarán automáticamente\n• Las configuraciones en las pantallas de Optimización y Personalización se añadirán según su estado actual en Winhance\n\nSi estás seguro de que tus selecciones son correctas, puedes continuar.\nSi no, haz clic en no, revisa tus selecciones de aplicaciones y configuraciones, y vuelve aquí.\n\n¿Deseas generar el archivo XML y añadirlo al medio?",
   "Dialog_Success": "Éxito",
   "Dialog_ValidationComplete": "Validación Completa",
