--- a/src/Winhance.UI/Features/Common/Localization/fr.json
+++ b/src/Winhance.UI/Features/Common/Localization/fr.json
@@ -1189,11 +1189,11 @@
   "Status_VerifyingApps": "Vérification des applications installées...",
   "Status_SortingApps": "Tri des applications pour l'affichage...",
   "Common_RestartRequired": "⚠️ Redémarrage du système requis pour que les modifications prennent effet",
-  "Compatibility_Windows10Only": "ℹ️ Ce paramètre s'applique uniquement à Windows 10",
-  "Compatibility_Windows11Only": "ℹ️ Ce paramètre s'applique uniquement à Windows 11",
-  "Compatibility_MinBuild": "ℹ️ Nécessite la version {0} de Windows ou une version ultérieure",
-  "Compatibility_MaxBuild": "ℹ️ Uniquement compatible avec la version {0} de Windows ou une version antérieure",
-  "Compatibility_BuildRange": "ℹ️ Compatible avec les versions : {0}",
+  "Compatibility_Windows10Only": "Ce paramètre s'applique uniquement à Windows 10",
+  "Compatibility_Windows11Only": "Ce paramètre s'applique uniquement à Windows 11",
+  "Compatibility_MinBuild": "Nécessite la version {0} de Windows ou une version ultérieure",
+  "Compatibility_MaxBuild": "Uniquement compatible avec la version {0} de Windows ou une version antérieure",
+  "Compatibility_BuildRange": "Compatible avec les versions : {0}",
   "Msg_GenerateXmlConfirm": "Vous pouvez générer un fichier autounattend.xml à ajouter à une ISO de Windows pour personnaliser Windows lors de l'installation en fonction de vos sélections dans Winhance.\n\nComment cela fonctionne :\n• Les applications sélectionnées sur l'écran des applications Windows seront désinstallées automatiquement\n• Les paramètres des écrans Optimiser et Personnaliser seront ajoutés en fonction de leur état actuel dans Winhance\n\nSi vous êtes sûr que vos sélections sont correctes, vous pouvez continuer.\nSinon, cliquez sur non, passez en revue vos sélections d'applications et de paramètres, et revenez ici.\n\nVoulez-vous générer le fichier XML et l'ajouter au support ?",
   "Dialog_Success": "Succès",
   "Dialog_ValidationComplete": "Validation terminée",
