--- a/src/Winhance.UI/Features/Common/Localization/hi.json
+++ b/src/Winhance.UI/Features/Common/Localization/hi.json
@@ -1189,11 +1189,11 @@
   "Status_VerifyingApps": "कौन से एप्लिकेशन इंस्टॉल हैं, यह सत्यापित किया जा रहा है...",
   "Status_SortingApps": "प्रदर्शन के लिए एप्लिकेशन सॉर्ट किए जा रहे हैं...",
   "Common_RestartRequired": "⚠️ परिवर्तनों को प्रभावी होने के लिए सिस्टम को फिर से शुरू करने की आवश्यकता है",
-  "Compatibility_Windows10Only": "ℹ️ यह सेटिंग केवल विंडोज 10 पर लागू होती है",
-  "Compatibility_Windows11Only": "ℹ️ यह सेटिंग केवल विंडोज 11 पर लागू होती है",
-  "Compatibility_MinBuild": "ℹ️ विंडोज बिल्ड {0} या उच्चतर की आवश्यकता है",
-  "Compatibility_MaxBuild": "ℹ️ केवल विंडोज बिल्ड {0} या उससे कम के साथ संगत",
-  "Compatibility_BuildRange": "ℹ️ बिल्ड के साथ संगत: {0}",
+  "Compatibility_Windows10Only": "यह सेटिंग केवल विंडोज 10 पर लागू होती है",
+  "Compatibility_Windows11Only": "यह सेटिंग केवल विंडोज 11 पर लागू होती है",
+  "Compatibility_MinBuild": "विंडोज बिल्ड {0} या उच्चतर की आवश्यकता है",
+  "Compatibility_MaxBuild": "केवल विंडोज बिल्ड {0} या उससे कम के साथ संगत",
+  "Compatibility_BuildRange": "बिल्ड के साथ संगत: {0}",
   "Msg_GenerateXmlConfirm": "आप विनहान्स में अपने चयनों के आधार पर इंस्टॉलेशन के दौरान विंडोज को अनुकूलित करने के लिए विंडोज आईएसओ में शामिल करने के लिए एक autounattend.xml फ़ाइल बना सकते हैं।\n\nयह कैसे काम करता है:\n• विंडोज ऐप्स स्क्रीन पर चयनित ऐप्स स्वचालित रूप से अनइंस्टॉल हो जाएंगे\n• ऑप्टिमाइज़ और कस्टमाइज़ स्क्रीन में सेटिंग्स को विनहान्स में उनकी वर्तमान स्थिति के अनुसार शामिल किया जाएगा\n\nयदि आपको यकीन है कि आपके चयन सही हैं तो आप जारी रख सकते हैं।\nयदि नहीं, तो नहीं पर क्लिक करें, अपने ऐप और सेटिंग के चयन की समीक्षा करें, और यहां वापस आएं।\n\nक्या आप XML फ़ाइल बनाना चाहते हैं और इसे मीडिया में शामिल करना चाहते हैं?",
   "Dialog_Success": "सफलता",
   "Dialog_ValidationComplete": "सत्यापन पूरा हुआ",
