--- a/src/Winhance.UI/Features/Common/Localization/it.json
+++ b/src/Winhance.UI/Features/Common/Localization/it.json
@@ -1189,11 +1189,11 @@
   "Status_VerifyingApps": "Verifica delle applicazioni installate in corso...",
   "Status_SortingApps": "Ordinamento delle applicazioni per la visualizzazione in corso...",
   "Common_RestartRequired": "⚠️ Riavvio del sistema richiesto affinché le modifiche abbiano effetto",
-  "Compatibility_Windows10Only": "ℹ️ Questa impostazione si applica solo a Windows 10",
-  "Compatibility_Windows11Only": "ℹ️ Questa impostazione si applica solo a Windows 11",
-  "Compatibility_MinBuild": "ℹ️ Richiede la build di Windows {0} o successiva",
-  "Compatibility_MaxBuild": "ℹ️ Compatibile solo con la build di Windows {0} o precedente",
-  "Compatibility_BuildRange": "ℹ️ Compatibile con le build: {0}",
+  "Compatibility_Windows10Only": "Questa impostazione si applica solo a Windows 10",
+  "Compatibility_Windows11Only": "Questa impostazione si applica solo a Windows 11",
+  "Compatibility_MinBuild": "Richiede la build di Windows {0} o successiva",
+  "Compatibility_MaxBuild": "Compatibile solo con la build di Windows {0} o precedente",
+  "Compatibility_BuildRange": "Compatibile con le build: {0}",
   "Msg_GenerateXmlConfirm": "Puoi generare un file autounattend.xml da aggiungere a un ISO di Windows per personalizzare Windows durante l'installazione in base alle tue selezioni in Winhance.\n\nCome funziona:\n• Le app selezionate nella schermata delle app di Windows verranno disinstallate automaticamente\n• Le impostazioni nelle schermate Ottimizza e Personalizza verranno aggiunte in base al loro stato attuale in Winhance\n\nSe sei sicuro che le tue selezioni siano corrette puoi continuare.\nIn caso contrario, premi no, rivedi le selezioni di app e impostazioni e torna qui.\n\nVuoi generare il file XML e aggiungerlo al supporto?",
   "Dialog_Success": "Successo",
   "Dialog_ValidationComplete": "Convalida completata",
