--- a/src/Winhance.UI/Features/Common/Localization/lt.json
+++ b/src/Winhance.UI/Features/Common/Localization/lt.json
@@ -1189,11 +1189,11 @@
   "Status_VerifyingApps": "Tikrinama, kurios programos yra įdiegtos...",
   "Status_SortingApps": "Rūšiuojamos programos rodymui...",
   "Common_RestartRequired": "⚠️ Norint, kad pakeitimai įsigaliotų, reikalingas sistemos perkrovimas",
-  "Compatibility_Windows10Only": "ℹ️ Šis nustatymas taikomas tik Windows 10",
-  "Compatibility_Windows11Only": "ℹ️ Šis nustatymas taikomas tik Windows 11",
-  "Compatibility_MinBuild": "ℹ️ Reikalinga Windows versija {0} arba naujesnė",
-  "Compatibility_MaxBuild": "ℹ️ Suderinama tik su Windows versija {0} arba senesne",
-  "Compatibility_BuildRange": "ℹ️ Suderinama su versijomis: {0}",
+  "Compatibility_Windows10Only": "Šis nustatymas taikomas tik Windows 10",
+  "Compatibility_Windows11Only": "Šis nustatymas taikomas tik Windows 11",
+  "Compatibility_MinBuild": "Reikalinga Windows versija {0} arba naujesnė",
+  "Compatibility_MaxBuild": "Suderinama tik su Windows versija {0} arba senesne",
+  "Compatibility_BuildRange": "Suderinama su versijomis: {0}",
   "Msg_GenerateXmlConfirm": "Galite sugeneruoti autounattend.xml failą, kurį pridėsite prie Windows ISO, kad pritaikytumėte Windows diegimo metu pagal jūsų pasirinkimus Winhance.\n\nKaip tai veikia:\n• Programos, pasirinktos Windows programų ekrane, bus automatiškai pašalintos\n• Nustatymai optimizavimo ir pritaikymo ekranuose bus pridėti pagal jų dabartinę būseną Winhance\n\nJei esate tikri, kad jūsų pasirinkimai teisingi, galite tęsti.\nJei ne, paspauskite „ne“, peržiūrėkite savo programų ir nustatymų pasirinkimus ir grįžkite čia.\n\nAr norite sugeneruoti XML failą ir pridėti jį į mediją?",
   "Dialog_Success": "Sėkmė",
   "Dialog_ValidationComplete": "Patvirtinimas baigtas",
