--- a/src/Winhance.UI/Features/Common/Localization/lv.json
+++ b/src/Winhance.UI/Features/Common/Localization/lv.json
@@ -1189,11 +1189,11 @@
   "Status_VerifyingApps": "Pārbauda, kuras lietojumprogrammas ir instalētas...",
   "Status_SortingApps": "Kārto lietojumprogrammas attēlošanai...",
   "Common_RestartRequired": "⚠️ Lai izmaiņas stātos spēkā, nepieciešama sistēmas restartēšana",
-  "Compatibility_Windows10Only": "ℹ️ Šis iestatījums attiecas tikai uz Windows 10",
-  "Compatibility_Windows11Only": "ℹ️ Šis iestatījums attiecas tikai uz Windows 11",
-  "Compatibility_MinBuild": "ℹ️ Nepieciešama Windows būvējuma versija {0} vai jaunāka",
-  "Compatibility_MaxBuild": "ℹ️ Saderīgs tikai ar Windows būvējuma versiju {0} vai vecāku",
-  "Compatibility_BuildRange": "ℹ️ Saderīgs ar būvējumiem: {0}",
+  "Compatibility_Windows10Only": "Šis iestatījums attiecas tikai uz Windows 10",
+  "Compatibility_Windows11Only": "Šis iestatījums attiecas tikai uz Windows 11",
+  "Compatibility_MinBuild": "Nepieciešama Windows būvējuma versija {0} vai jaunāka",
+  "Compatibility_MaxBuild": "Saderīgs tikai ar Windows būvējuma versiju {0} vai vecāku",
+  "Compatibility_BuildRange": "Saderīgs ar būvējumiem: {0}",
   "Msg_GenerateXmlConfirm": "Jūs varat ģenerēt autounattend.xml failu, ko pievienot Windows ISO, lai pielāgotu Windows instalēšanas laikā, pamatojoties uz jūsu atlasēm Winhance.\n\nKā tas darbojas:\n• Lietotnes, kas atlasītas Windows lietotņu ekrānā, tiks automātiski atinstalētas\n• Iestatījumi optimizēšanas un pielāgošanas ekrānos tiks pievienoti atbilstoši to pašreizējam stāvoklim Winhance\n\nJa esat pārliecināts, ka jūsu atlases ir pareizas, varat turpināt.\nJa nē, nospiediet Nē, pārskatiet savas lietotņu un iestatījumu atlases un atgriezieties šeit.\n\nVai vēlaties ģenerēt XML failu un pievienot to multividei?",
   "Dialog_Success": "Veiksmīgi",
   "Dialog_ValidationComplete": "Pārbaude pabeigta",
