--- a/src/Winhance.UI/Features/Common/Localization/ru.json
+++ b/src/Winhance.UI/Features/Common/Localization/ru.json
@@ -1189,11 +1189,11 @@
   "Status_VerifyingApps": "Проверка установленных приложений...",
   "Status_SortingApps": "Сортировка приложений для отображения...",
   "Common_RestartRequired": "⚠️ Для вступления изменений в силу требуется перезагрузка системы",
-  "Compatibility_Windows10Only": "ℹ️ Эта настройка применяется только к Windows 10",
-  "Compatibility_Windows11Only": "ℹ️ Эта настройка применяется только к Windows 11",
-  "Compatibility_MinBuild": "ℹ️ Требуется сборка Windows {0} или выше",
-  "Compatibility_MaxBuild": "ℹ️ Совместимо только со сборкой Windows {0} или ниже",
-  "Compatibility_BuildRange": "ℹ️ Совместимо со сборками: {0}",
+  "Compatibility_Windows10Only": "Эта настройка применяется только к Windows 10",
+  "Compatibility_Windows11Only": "Эта настройка применяется только к Windows 11",
+  "Compatibility_MinBuild": "Требуется сборка Windows {0} или выше",
+  "Compatibility_MaxBuild": "Совместимо только со сборкой Windows {0} или ниже",
+  "Compatibility_BuildRange": "Совместимо со сборками: {0}",
   "Msg_GenerateXmlConfirm": "Вы можете создать файл autounattend.xml для добавления в ISO-образ Windows, чтобы настроить Windows во время установки на основе ваших выборов в Winhance.\n\nКак это работает:\n• Приложения, выбранные на экране 'Приложения Windows', будут удалены автоматически\n• Настройки на экранах 'Оптимизация' и 'Настройка' будут добавлены в соответствии с их текущим состоянием в Winhance\n\nЕсли вы уверены, что ваши выборы верны, вы можете продолжить.\nЕсли нет, нажмите 'Нет', просмотрите свои выборы приложений и настроек и вернитесь сюда.\n\nВы хотите создать XML-файл и добавить его в носитель?",
   "Dialog_Success": "Успех",
   "Dialog_ValidationComplete": "Проверка завершена",
