--- a/src/Winhance.UI/Features/Common/Localization/uk.json
+++ b/src/Winhance.UI/Features/Common/Localization/uk.json
@@ -1189,11 +1189,11 @@
   "Status_VerifyingApps": "Перевірка встановлених додатків...",
   "Status_SortingApps": "Сортування додатків для відображення...",
   "Common_RestartRequired": "⚠️ Для набуття чинності змін потрібне перезавантаження системи",
-  "Compatibility_Windows10Only": "ℹ️ Це налаштування стосується лише Windows 10",
-  "Compatibility_Windows11Only": "ℹ️ Це налаштування стосується лише Windows 11",
-  "Compatibility_MinBuild": "ℹ️ Потрібна збірка Windows {0} або новіша",
-  "Compatibility_MaxBuild": "ℹ️ Сумісно лише зі збіркою Windows {0} або старішою",
-  "Compatibility_BuildRange": "ℹ️ Сумісно зі збірками: {0}",
+  "Compatibility_Windows10Only": "Це налаштування стосується лише Windows 10",
+  "Compatibility_Windows11Only": "Це налаштування стосується лише Windows 11",
+  "Compatibility_MinBuild": "Потрібна збірка Windows {0} або новіша",
+  "Compatibility_MaxBuild": "Сумісно лише зі збіркою Windows {0} або старішою",
+  "Compatibility_BuildRange": "Сумісно зі збірками: {0}",
   "Msg_GenerateXmlConfirm": "Ви можете створити файл autounattend.xml для додавання до ISO Windows, щоб налаштувати Windows під час встановлення на основі ваших виборів у Winhance.\n\nЯк це працює:\n• Додатки, вибрані на екрані 'Додатки Windows', будуть автоматично видалені\n• Налаштування на екранах 'Оптимізація' та 'Налаштування' будуть додані відповідно до їх поточного стану у Winhance\n\nЯкщо ви впевнені, що ваші вибори правильні, ви можете продовжити.\nЯкщо ні, натисніть 'Ні', перегляньте вибір додатків та налаштувань і поверніться сюди.\n\nБажаєте створити XML-файл і додати його до носія?",
   "Dialog_Success": "Успіх",
   "Dialog_ValidationComplete": "Перевірку завершено",
