--- a/src/Winhance.UI/Features/Common/Localization/zh-Hans.json
+++ b/src/Winhance.UI/Features/Common/Localization/zh-Hans.json
@@ -1189,11 +1189,11 @@
   "Status_VerifyingApps": "正在验证已安装的应用程序...",
   "Status_SortingApps": "正在排序应用程序以供显示...",
   "Common_RestartRequired": "⚠️ 需要重新启动系统才能使更改生效",
-  "Compatibility_Windows10Only": "ℹ️ 此设置仅适用于 Windows 10",
-  "Compatibility_Windows11Only": "ℹ️ 此设置仅适用于 Windows 11",
-  "Compatibility_MinBuild": "ℹ️ 需要 Windows 版本 {0} 或更高版本",
-  "Compatibility_MaxBuild": "ℹ️ 仅与 Windows 版本 {0} 或更低版本兼容",
-  "Compatibility_BuildRange": "ℹ️ 与版本兼容：{0}",
+  "Compatibility_Windows10Only": "此设置仅适用于 Windows 10",
+  "Compatibility_Windows11Only": "此设置仅适用于 Windows 11",
+  "Compatibility_MinBuild": "需要 Windows 版本 {0} 或更高版本",
+  "Compatibility_MaxBuild": "仅与 Windows 版本 {0} 或更低版本兼容",
+  "Compatibility_BuildRange": "与版本兼容：{0}",
   "Msg_GenerateXmlConfirm": "您可以生成一个 autounattend.xml 文件以添加到 Windows ISO 中，以便在安装过程中根据您在 Winhance 中的选择自定义 Windows。\n\n工作原理：\n• 在 Windows Apps 屏幕上选择的应用将被自动卸载\n• “优化”和“自定义”屏幕中的设置将根据其在 Winhance 中的当前状态添加\n\n如果您确定您的选择是正确的，则可以继续。\n否则，请点击“否”，查看您的应用和设置选择，然后返回此处。\n\n您要生成 XML 文件并将其添加到介质吗？",
   "Dialog_Success": "成功",
   "Dialog_ValidationComplete": "验证完成",
