--- a/src/Winhance.WPF/Localization/hu.json
+++ b/src/Winhance.WPF/Localization/hu.json
@@ -1184,11 +1184,11 @@
   "Status_VerifyingApps": "A telepített alkalmazások ellenőrzése...",
   "Status_SortingApps": "Alkalmazások rendezése megjelenítéshez...",
   "Common_RestartRequired": "⚠️ A változtatások érvénybe lépéséhez újra kell indítani a rendszert",
-  "Compatibility_Windows10Only": "ℹ️ Ez a beállítás csak a Windows 10-re vonatkozik",
-  "Compatibility_Windows11Only": "ℹ️ Ez a beállítás csak a Windows 11-re vonatkozik",
-  "Compatibility_MinBuild": "ℹ️ A Windows {0} vagy újabb verzióját igényli",
-  "Compatibility_MaxBuild": "ℹ️ Csak a Windows {0} vagy alacsonyabb verzióival kompatibilis",
-  "Compatibility_BuildRange": "ℹ️ Kompatibilis a következő verziókkal: {0}",
+  "Compatibility_Windows10Only": "Ez a beállítás csak a Windows 10-re vonatkozik",
+  "Compatibility_Windows11Only": "Ez a beállítás csak a Windows 11-re vonatkozik",
+  "Compatibility_MinBuild": "A Windows {0} vagy újabb verzióját igényli",
+  "Compatibility_MaxBuild": "Csak a Windows {0} vagy alacsonyabb verzióival kompatibilis",
+  "Compatibility_BuildRange": "Kompatibilis a következő verziókkal: {0}",
   "Msg_GenerateXmlConfirm": "Létrehozhat egy autounattend.xml fájlt, amelyet hozzáadhat a Windows ISO-hoz, és testreszabhatja a Windows rendszert a telepítés során a Winhance-ban megadott beállítások alapján.\n\nHogyan működik ez:\n• A Windows Alkalmazások képernyőn kiválasztott alkalmazások automatikusan eltávolításra kerülnek\n• Settings in the Optimize and Customize screens will be added according to their current state in Winhance\n\nHa biztos abban, hogy a kiválasztásai helyesek, folytathatja.\nHa nem, nyomja meg a Nem gombot, tekintse át az alkalmazást és a beállításokat, és térjen vissza ide.\n\nSzeretné létrehozni az XML-fájlt, és hozzáadni a médiához?",
   "Dialog_Success": "Siker",
   "Dialog_ValidationComplete": "Az érvényesítés befejeződött",
