--- a/src/Winhance.WPF/Localization/ja.json
+++ b/src/Winhance.WPF/Localization/ja.json
@@ -1180,11 +1180,11 @@
   "Status_VerifyingApps": "インストールされているアプリケーションを確認中...",
   "Status_SortingApps": "表示用にアプリケーションを並べ替え中...",
   "Common_RestartRequired": "⚠️ 変更を有効にするには、システムの再起動が必要です",
-  "Compatibility_Windows10Only": "ℹ️ この設定はWindows 10にのみ適用されます",
-  "Compatibility_Windows11Only": "ℹ️ この設定はWindows 11にのみ適用されます",
-  "Compatibility_MinBuild": "ℹ️ Windowsビルド{0}以降が必要です",
-  "Compatibility_MaxBuild": "ℹ️ Windowsビルド{0}以下とのみ互換性があります",
-  "Compatibility_BuildRange": "ℹ️ 互換性のあるビルド：{0}",
+  "Compatibility_Windows10Only": "この設定はWindows 10にのみ適用されます",
+  "Compatibility_Windows11Only": "この設定はWindows 11にのみ適用されます",
+  "Compatibility_MinBuild": "Windowsビルド{0}以降が必要です",
+  "Compatibility_MaxBuild": "Windowsビルド{0}以下とのみ互換性があります",
+  "Compatibility_BuildRange": "互換性のあるビルド：{0}",
   "Msg_GenerateXmlConfirm": "Winhanceでの選択に基づいてWindowsインストール中にWindowsをカスタマイズするために、Windows ISOに追加するautounattend.xmlファイルを生成できます。\n\n仕組み：\n• Windowsアプリ画面で選択したアプリは自動的にアンインストールされます\n• 最適化およびカスタマイズ画面の設定は、Winhanceでの現在の状態に応じて追加されます\n\n選択が正しいことを確認したら、続行できます。\nそうでない場合は、「いいえ」をクリックし、アプリと設定の選択を確認してから、ここに戻ってください。\n\nXMLファイルを生成してメディアに追加しますか？",
   "Dialog_Success": "成功",
   "Dialog_ValidationComplete": "検証完了",
