--- a/src/Winhance.WPF/Localization/pl.json
+++ b/src/Winhance.WPF/Localization/pl.json
@@ -1180,11 +1180,11 @@
   "Status_VerifyingApps": "Weryfikacja zainstalowanych aplikacji...",
   "Status_SortingApps": "Sortowanie aplikacji do wyświetlenia...",
   "Common_RestartRequired": "⚠️ Wymagane ponowne uruchomienie systemu, aby zmiany weszły w życie",
-  "Compatibility_Windows10Only": "ℹ️ To ustawienie dotyczy tylko systemu Windows 10",
-  "Compatibility_Windows11Only": "ℹ️ To ustawienie dotyczy tylko systemu Windows 11",
-  "Compatibility_MinBuild": "ℹ️ Wymaga kompilacji Windows {0} lub nowszej",
-  "Compatibility_MaxBuild": "ℹ️ Kompatybilne tylko z kompilacją Windows {0} lub starszą",
-  "Compatibility_BuildRange": "ℹ️ Kompatybilne z kompilacjami: {0}",
+  "Compatibility_Windows10Only": "To ustawienie dotyczy tylko systemu Windows 10",
+  "Compatibility_Windows11Only": "To ustawienie dotyczy tylko systemu Windows 11",
+  "Compatibility_MinBuild": "Wymaga kompilacji Windows {0} lub nowszej",
+  "Compatibility_MaxBuild": "Kompatybilne tylko z kompilacją Windows {0} lub starszą",
+  "Compatibility_BuildRange": "Kompatybilne z kompilacjami: {0}",
   "Msg_GenerateXmlConfirm": "Możesz wygenerować plik autounattend.xml do dodania do obrazu ISO systemu Windows, aby dostosować system Windows podczas instalacji na podstawie Twoich wyborów w Winhance.\n\nJak to działa:\n• Aplikacje wybrane na ekranie Aplikacje Windows zostaną automatycznie odinstalowane\n• Ustawienia na ekranach Optymalizuj i Dostosuj zostaną dodane zgodnie z ich bieżącym stanem w Winhance\n\nJeśli jesteś pewien, że Twoje wybory są prawidłowe, możesz kontynuować.\nJeśli nie, kliknij nie, przejrzyj wybrane aplikacje i ustawienia, a następnie wróć tutaj.\n\nCzy chcesz wygenerować plik XML i dodać go do nośnika?",
   "Dialog_Success": "Sukces",
   "Dialog_ValidationComplete": "Weryfikacja zakończona",
