--- a/src/Winhance.WPF/Localization/pt-BR.json
+++ b/src/Winhance.WPF/Localization/pt-BR.json
@@ -1180,11 +1180,11 @@
   "Status_VerifyingApps": "Verificando quais aplicativos estão instalados...",
   "Status_SortingApps": "Ordenando aplicativos para exibição...",
   "Common_RestartRequired": "⚠️ Reinicialização do sistema necessária para que as alterações entrem em vigor",
-  "Compatibility_Windows10Only": "ℹ️ Esta configuração se aplica apenas ao Windows 10",
-  "Compatibility_Windows11Only": "ℹ️ Esta configuração se aplica apenas ao Windows 11",
-  "Compatibility_MinBuild": "ℹ️ Requer a compilação {0} do Windows ou superior",
-  "Compatibility_MaxBuild": "ℹ️ Compatível apenas com a compilação {0} do Windows ou inferior",
-  "Compatibility_BuildRange": "ℹ️ Compatível com as compilações: {0}",
+  "Compatibility_Windows10Only": "Esta configuração se aplica apenas ao Windows 10",
+  "Compatibility_Windows11Only": "Esta configuração se aplica apenas ao Windows 11",
+  "Compatibility_MinBuild": "Requer a compilação {0} do Windows ou superior",
+  "Compatibility_MaxBuild": "Compatível apenas com a compilação {0} do Windows ou inferior",
+  "Compatibility_BuildRange": "Compatível com as compilações: {0}",
   "Msg_GenerateXmlConfirm": "Você pode gerar um arquivo autounattend.xml para adicionar a um ISO do Windows para personalizar o Windows durante a instalação com base em suas seleções no Winhance.\n\nComo isso funciona:\n• Aplicativos selecionados na tela de Aplicativos do Windows serão desinstalados automaticamente\n• Configurações nas telas Otimizar e Personalizar serão adicionadas de acordo com seu estado atual no Winhance\n\nSe tiver certeza de que suas seleções estão corretas, você pode continuar.\nCaso contrário, clique em não, revise suas seleções de aplicativos e configurações e volte aqui.\n\nDeseja gerar o arquivo XML e adicioná-lo à mídia?",
   "Dialog_Success": "Sucesso",
   "Dialog_ValidationComplete": "Validação Concluída",
