--- a/src/Winhance.WPF/Localization/pt.json
+++ b/src/Winhance.WPF/Localization/pt.json
@@ -1180,11 +1180,11 @@
   "Status_VerifyingApps": "A verificar quais as aplicações que estão instaladas...",
   "Status_SortingApps": "A ordenar aplicações para exibição...",
   "Common_RestartRequired": "⚠️ É necessário reiniciar o sistema para que as alterações tenham efeito",
-  "Compatibility_Windows10Only": "ℹ️ Esta definição aplica-se apenas ao Windows 10",
-  "Compatibility_Windows11Only": "ℹ️ Esta definição aplica-se apenas ao Windows 11",
-  "Compatibility_MinBuild": "ℹ️ Requer a compilação {0} do Windows ou superior",
-  "Compatibility_MaxBuild": "ℹ️ Apenas compatível com a compilação {0} do Windows ou inferior",
-  "Compatibility_BuildRange": "ℹ️ Compatível com as compilações: {0}",
+  "Compatibility_Windows10Only": "Esta definição aplica-se apenas ao Windows 10",
+  "Compatibility_Windows11Only": "Esta definição aplica-se apenas ao Windows 11",
+  "Compatibility_MinBuild": "Requer a compilação {0} do Windows ou superior",
+  "Compatibility_MaxBuild": "Apenas compatível com a compilação {0} do Windows ou inferior",
+  "Compatibility_BuildRange": "Compatível com as compilações: {0}",
   "Msg_GenerateXmlConfirm": "Pode gerar um ficheiro autounattend.xml para adicionar a um ISO do Windows para personalizar o Windows durante a instalação com base nas suas seleções no Winhance.\n\nComo isto funciona:\n• As aplicações selecionadas no ecrã Aplicações do Windows serão desinstaladas automaticamente\n• As definições nos ecrãs Otimizar e Personalizar serão adicionadas de acordo com o seu estado atual no Winhance\n\nSe tiver a certeza de que as suas seleções estão corretas, pode continuar.\nCaso contrário, clique em não, reveja as suas seleções de aplicações e definições e volte aqui.\n\nDeseja gerar o ficheiro XML e adicioná-lo à média?",
   "Dialog_Success": "Sucesso",
   "Dialog_ValidationComplete": "Validação Concluída",
