--- a/src/Winhance.WPF/Localization/sv.json
+++ b/src/Winhance.WPF/Localization/sv.json
@@ -1180,11 +1180,11 @@
   "Status_VerifyingApps": "Verifierar vilka program som är installerade...",
   "Status_SortingApps": "Sorterar program för visning...",
   "Common_RestartRequired": "⚠️ Systemomstart krävs för att ändringarna ska träda i kraft",
-  "Compatibility_Windows10Only": "ℹ️ Den här inställningen gäller endast för Windows 10",
-  "Compatibility_Windows11Only": "ℹ️ Den här inställningen gäller endast för Windows 11",
-  "Compatibility_MinBuild": "ℹ️ Kräver Windows build {0} eller högre",
-  "Compatibility_MaxBuild": "ℹ️ Endast kompatibel med Windows build {0} eller lägre",
-  "Compatibility_BuildRange": "ℹ️ Kompatibel med builds: {0}",
+  "Compatibility_Windows10Only": "Den här inställningen gäller endast för Windows 10",
+  "Compatibility_Windows11Only": "Den här inställningen gäller endast för Windows 11",
+  "Compatibility_MinBuild": "Kräver Windows build {0} eller högre",
+  "Compatibility_MaxBuild": "Endast kompatibel med Windows build {0} eller lägre",
+  "Compatibility_BuildRange": "Kompatibel med builds: {0}",
   "Msg_GenerateXmlConfirm": "Du kan generera en autounattend.xml-fil att lägga till i en Windows ISO för att anpassa Windows under installationen baserat på dina val i Winhance.\n\nHur det fungerar:\n• Appar valda på skärmen Windows-appar kommer att avinstalleras automatiskt\n• Inställningar på skärmarna Optimera och Anpassa kommer att läggas till enligt deras nuvarande tillstånd i Winhance\n\nOm du är säker på att dina val är korrekta kan du fortsätta.\nOm inte, tryck på nej, granska dina app- och inställningsval och kom tillbaka hit.\n\nVill du generera XML-filen och lägga till den i mediet?",
   "Dialog_Success": "Lyckades",
   "Dialog_ValidationComplete": "Validering slutförd",
