--- a/src/Winhance.WPF/Localization/vi.json
+++ b/src/Winhance.WPF/Localization/vi.json
@@ -1180,11 +1180,11 @@
   "Status_VerifyingApps": "Đang xác minh những ứng dụng nào đã được cài đặt...",
   "Status_SortingApps": "Đang sắp xếp các ứng dụng để hiển thị...",
   "Common_RestartRequired": "⚠️ Cần khởi động lại hệ thống để các thay đổi có hiệu lực",
-  "Compatibility_Windows10Only": "ℹ️ Cài đặt này chỉ áp dụng cho Windows 10",
-  "Compatibility_Windows11Only": "ℹ️ Cài đặt này chỉ áp dụng cho Windows 11",
-  "Compatibility_MinBuild": "ℹ️ Yêu cầu bản dựng Windows {0} trở lên",
-  "Compatibility_MaxBuild": "ℹ️ Chỉ tương thích với bản dựng Windows {0} trở xuống",
-  "Compatibility_BuildRange": "ℹ️ Tương thích với các bản dựng: {0}",
+  "Compatibility_Windows10Only": "Cài đặt này chỉ áp dụng cho Windows 10",
+  "Compatibility_Windows11Only": "Cài đặt này chỉ áp dụng cho Windows 11",
+  "Compatibility_MinBuild": "Yêu cầu bản dựng Windows {0} trở lên",
+  "Compatibility_MaxBuild": "Chỉ tương thích với bản dựng Windows {0} trở xuống",
+  "Compatibility_BuildRange": "Tương thích với các bản dựng: {0}",
   "Msg_GenerateXmlConfirm": "Bạn có thể tạo tệp autounattend.xml để thêm vào Windows ISO để tùy chỉnh Windows trong quá trình cài đặt dựa trên các lựa chọn của bạn trong Winhance.\n\nCách hoạt động:\n• Các ứng dụng được chọn trên màn hình Ứng dụng Windows sẽ được gỡ cài đặt tự động\n• Các cài đặt trong màn hình Tối ưu hóa và Tùy chỉnh sẽ được thêm theo trạng thái hiện tại của chúng trong Winhance\n\nNếu bạn chắc chắn rằng các lựa chọn của mình là chính xác, bạn có thể tiếp tục.\n Nếu không, hãy nhấn không, xem lại các lựa chọn ứng dụng và cài đặt của bạn và quay lại đây.\n\nBạn có muốn tạo tệp XML và thêm nó vào phương tiện không?",
   "Dialog_Success": "Thành công",
   "Dialog_ValidationComplete": "Xác thực hoàn tất",
