--- a/src/Winhance.WPF/Localization/zh-Hant.json
+++ b/src/Winhance.WPF/Localization/zh-Hant.json
@@ -1180,11 +1180,11 @@
   "Status_VerifyingApps": "正在驗證已安裝的應用程式...",
   "Status_SortingApps": "正在排序應用程式以進行顯示...",
   "Common_RestartRequired": "⚠️ 系統需要重新啟動才能讓變更生效",
-  "Compatibility_Windows10Only": "ℹ️ 此設定僅適用於 Windows 10",
-  "Compatibility_Windows11Only": "ℹ️ 此設定僅適用於 Windows 11",
-  "Compatibility_MinBuild": "ℹ️ 需要 Windows 組建 {0} 或更高版本",
-  "Compatibility_MaxBuild": "ℹ️ 僅相容於 Windows 組建 {0} 或更低版本",
-  "Compatibility_BuildRange": "ℹ️ 相容於組建：{0}",
+  "Compatibility_Windows10Only": "此設定僅適用於 Windows 10",
+  "Compatibility_Windows11Only": "此設定僅適用於 Windows 11",
+  "Compatibility_MinBuild": "需要 Windows 組建 {0} 或更高版本",
+  "Compatibility_MaxBuild": "僅相容於 Windows 組建 {0} 或更低版本",
+  "Compatibility_BuildRange": "相容於組建：{0}",
   "Msg_GenerateXmlConfirm": "您可以產生 autounattend.xml 檔案並加入 Windows ISO，以便根據您在 Winhance 中的選擇在安裝期間自訂 Windows。\n\n運作方式：\n• 在 Windows 應用程式畫面中選取的應用程式將自動被解除安裝\n• 最佳化與自訂畫面中的設定將根據其在 Winhance 中的目前狀態加入\n\n如果您確定您的選擇正確，可以繼續。\n如果不是，請按否，檢查您的應用程式與設定選擇，然後回到這裡。\n\n您想要產生 XML 檔案並將其加入媒體嗎？",
   "Dialog_Success": "成功",
   "Dialog_ValidationComplete": "驗證完成",
