--- a/src/Winhance.WPF/Localization/nl.json
+++ b/src/Winhance.WPF/Localization/nl.json
@@ -1180,11 +1180,11 @@
   "Status_VerifyingApps": "Verifiëren welke applicaties zijn geïnstalleerd...",
   "Status_SortingApps": "Applicaties sorteren voor weergave...",
   "Common_RestartRequired": "⚠️ Systeemherstart vereist om wijzigingen door te voeren",
-  "Compatibility_Windows10Only": "ℹ️ Deze instelling is alleen van toepassing op Windows 10",
-  "Compatibility_Windows11Only": "ℹ️ Deze instelling is alleen van toepassing op Windows 11",
-  "Compatibility_MinBuild": "ℹ️ Vereist Windows build {0} of hoger",
-  "Compatibility_MaxBuild": "ℹ️ Alleen compatibel met Windows build {0} of lager",
-  "Compatibility_BuildRange": "ℹ️ Compatibel met builds: {0}",
+  "Compatibility_Windows10Only": "Deze instelling is alleen van toepassing op Windows 10",
+  "Compatibility_Windows11Only": "Deze instelling is alleen van toepassing op Windows 11",
+  "Compatibility_MinBuild": "Vereist Windows build {0} of hoger",
+  "Compatibility_MaxBuild": "Alleen compatibel met Windows build {0} of lager",
+  "Compatibility_BuildRange": "Compatibel met builds: {0}",
   "Msg_GenerateXmlConfirm": "U kunt een autounattend.xml bestand genereren om toe te voegen aan een Windows ISO om Windows aan te passen tijdens installatie op basis van uw selecties in Winhance.\n\nHoe dit werkt:\n• Apps geselecteerd op het Windows Apps scherm worden automatisch gedeïnstalleerd\n• Instellingen in de Optimaliseren en Aanpassen schermen worden toegevoegd volgens hun huidige status in Winhance\n\nAls u zeker bent dat uw selecties correct zijn kunt u doorgaan.\nZo niet, druk op nee, controleer uw app- en instellingsselecties, en kom hier terug.\n\nWilt u het XML-bestand genereren en toevoegen aan de media?",
   "Dialog_Success": "Succes",
   "Dialog_ValidationComplete": "Validatie Voltooid",
